implemented prefixes parameter for mapSecrets